# librelogic-esp32

./: .gitignore  README.md
components/librelogic/: CMakeLists.txt  librelogic
components/librelogic/librelogic/include/: data.h  instruction.h  parser-ld.h  parser-tree.h  plc_iface.h  plclib.h  rung.h
components/librelogic/librelogic/src/: util.c  util.h
components/librelogic/librelogic/src/hw/: hardware-comedi.c  hardware-comedi.h  hardware-dry.c  hardware-dry.h  hardware-gpiod.c  hardware-gpiod.h  hardware-sim.c  hardware-sim.h  hardware-uspace.c  hardware-uspace.h  hardware.c
components/librelogic/librelogic/src/vm/: data.c  instruction.c  parser-il.c  parser-ld.c  parser-tree.c  plclib.c
components/librelogic/port/: hardware-esp32.c  hardware-esp32.h  hardware.c  plc_iface.h  plc_port.h
main/: CMakeLists.txt  main.c
